[gd_scene load_steps=3 format=3 uid="uid://cst17qr3jp8ip"]

[ext_resource type="Script" uid="uid://dyt5fx30m5bjg" path="res://clam_casino.gd" id="1_dwmu3"]
[ext_resource type="Script" uid="uid://btawessqkp7jt" path="res://button.gd" id="2_dwmu3"]

[node name="ClamCasino" type="Node"]
script = ExtResource("1_dwmu3")

[node name="BoardGrid" type="GridContainer" parent="."]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -28.0
offset_top = -28.0
offset_right = 28.0
offset_bottom = 28.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(5, 5)
pivot_offset = Vector2(28, 28)
columns = 5

[node name="LabelID" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 437.0
offset_top = 119.0
offset_right = 587.0
offset_bottom = 142.0
text = "game ID:"

[node name="LabelScore" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 650.0
offset_top = 117.0
offset_right = 800.0
offset_bottom = 140.0
text = "score: "

[node name="Button" type="Button" parent="."]
offset_left = 436.0
offset_top = 477.0
offset_right = 553.0
offset_bottom = 511.0
text = "new game"
script = ExtResource("2_dwmu3")
